<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_icon" >

        <ImageView
            android:id="@+id/reg_two_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/back_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reg_title"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/reg_input_verifphone_tag"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white" >

        <EditText
            android:id="@+id/reg_two_input_verif"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/verification_edittext_bg"
            android:ems="11"
            android:hint="@string/reg_input_verifphone"
            android:inputType="phone"
            android:padding="10dp" />

        <Button
            android:id="@+id/reg_two_verif_obtain"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/reg_obtain_again"
            android:textColor="@color/color_icon" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_two_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login"
        android:text="@string/reg_verif"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>