<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/re_banner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_icon">

        <TextView
            android:id="@+id/tv_change_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="16dp"
            android:text="@string/changenickname_cancel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_change_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/changenickname_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_change_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:padding="16dp"
            android:text="@string/changenickname_save"
            android:textColor="@color/white" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_change_info"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:hint="在此输入"
        android:paddingLeft="10dp"
        android:textColor="@color/color_neutralgrey"
        android:textSize="15sp" />

</LinearLayout>