<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true" >

    <com.tbs.tbs_mj.customview.ZoomImageView
        android:id="@+id/iv_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iv_photo"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/tv_photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="[幸福花园] 三居室·100㎡·5~8万"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_photo_title"
            android:layout_alignBottom="@+id/tv_photo_title"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="1/4"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:weightSum="9" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/store_nor"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tv_photo_store"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/download"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tv_photo_download"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/design_forme"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tv_photo_designforme"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>