<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/item_allorder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/color_darkgray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/item_allorder_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/img_not_lf"
            android:textColor="@color/color_icon"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/my_allorder_dot_red"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_alignRight="@id/item_allorder_date"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/dot_red"
            android:visibility="gone" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/bg_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:id="@+id/item_allorder_owner_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/allorder_owner"
            android:textColor="@color/color_darkgray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_allorder_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/item_allorder_owner_tag"
            android:padding="10dp"
            android:text="张先生"
            android:textColor="@color/color_darkgray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_allorder_district_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/item_allorder_owner"
            android:padding="10dp"
            android:text="@string/allorder_district"
            android:textColor="@color/color_darkgray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_allorder_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/item_allorder_district_tag"
            android:padding="10dp"
            android:text="深圳市"
            android:textColor="@color/color_darkgray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_allorder_budget_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/item_allorder_owner_tag"
            android:padding="10dp"
            android:text="@string/allorder_budget"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_allorder_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/item_allorder_budget_tag"
            android:layout_alignBottom="@+id/item_allorder_budget_tag"
            android:layout_alignLeft="@+id/item_allorder_owner"
            android:padding="10dp"
            android:text="4万"
            android:textColor="@color/color_darkgray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_allorder_area_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/item_allorder_budget"
            android:layout_alignBottom="@+id/item_allorder_budget"
            android:layout_alignLeft="@+id/item_allorder_district_tag"
            android:padding="10dp"
            android:text="@string/allorder_area"
            android:textColor="@color/color_darkgray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/item_allorder_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/item_allorder_area_tag"
            android:layout_alignBottom="@+id/item_allorder_area_tag"
            android:layout_alignLeft="@+id/item_allorder_district"
            android:padding="10dp"
            android:text="100㎡"
            android:textColor="@color/color_darkgray"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:id="@+id/item_allorder_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="订单编号：123456"
            android:textColor="@color/color_neutralgrey"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/item_ollorder_give"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/item_allorder_id"
            android:background="@drawable/images_give_orders" />

        <TextView
            android:id="@+id/item_allorder_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/verification_button_selector"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/allorder_phone"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/item_allorder_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/item_allorder_phone"
            android:background="@drawable/verification_button_selector"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/allorder_confirm"
            android:textColor="@color/white" />
    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/dividing_line" />

</LinearLayout>